--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -49,8 +49,39 @@
                     android:id="@+id/tv_empty_state"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:layout_gravity="center"
                     android:text="@string/no_posts_to_display" />
+
+                <LinearLayout android:id="@+id/join_layout"
+                    android:layout_width="wrap_content"
+                    android:background="@null"
+                    android:visibility="gone"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tv_join_offer"
+                        tools:text="Do yout want to join #cool_chat?"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:ellipsize="middle"
+                        android:textColor="@color/textlink_disabled"
+                        android:textSize="@dimen/text_title_size" />
+
+                    <com.applikey.mattermost.views.SafeButton
+                        android:id="@+id/btn_join_channel"
+                        style="@style/Button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/large"
+                        android:layout_marginStart="@dimen/large"
+                        android:layout_marginTop="@dimen/large"
+                        android:text="@string/join"
+                        android:textSize="@dimen/text_heading_size" />
+                </LinearLayout>
 
             </FrameLayout>
 
