--- a/app/src/main/res/layout/content_post_other.xml
+++ b/app/src/main/res/layout/content_post_other.xml
@@ -83,7 +83,7 @@
                 tools:text="User Message"
                 tools:visibility="visible" />
 
-            <com.applikey.mattermost.views.ContentTextView
+            <com.applikey.mattermost.views.LinkTextView
                 android:id="@+id/tv_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
