--- a/app/src/main/res/layout/people_new_channel_item.xml
+++ b/app/src/main/res/layout/people_new_channel_item.xml
@@ -5,8 +5,8 @@
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
     android:paddingBottom="@dimen/pending_people_item_bottom_margin"
-    android:paddingEnd="@dimen/more"
-    android:paddingStart="@dimen/more"
+    android:paddingEnd="@dimen/channel_horizontal_margin"
+    android:paddingStart="@dimen/channel_horizontal_margin"
     android:paddingTop="@dimen/pending_people_item_top_margin">
 
     <ImageView
