--- a/app/src/main/res/layout/activity_search_chat.xml
+++ b/app/src/main/res/layout/activity_search_chat.xml
@@ -18,21 +18,24 @@
             android:id="@+id/btn_clear_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="8dp"
+            android:layout_gravity="end"
             android:layout_marginEnd="@dimen/normal"
-            android:src="@drawable/ic_close"
             android:background="@android:color/transparent"
-            android:layout_gravity="end"/>
+            android:padding="8dp"
+            android:src="@drawable/ic_close" />
 
         <EditText
             android:id="@+id/et_search"
+            style="@style/SearchEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:layout_marginEnd="@dimen/margin_3x"
-            android:fontFamily="sans-serif"
-            style="@style/SearchEditText"
-            android:background="@null"/>
+            android:background="@null"
+            android:ellipsize="end"
+            android:hint="@string/search_with_ellipsis"
+            android:inputType="text"
+            android:maxLines="1" />
 
     </android.support.v7.widget.Toolbar>
 
