--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -126,4 +126,9 @@
 
     <dimen name="channel_horizontal_margin">30dp</dimen>
     <dimen name="channel_horizontal_margin_edit_text">26dp</dimen>
+
+    <dimen name="drawer_header_height">100dp</dimen>
+    <dimen name="drawer_header_avatar_margin">30dp</dimen>
+    <dimen name="drawer_header_avatar_size">40dp</dimen>
+    <dimen name="material_drawer_sticky_footer_elevation">0dp</dimen>
 </resources>
