--- a/app/src/main/res/layout/list_item_group_chat.xml
+++ b/app/src/main/res/layout/list_item_group_chat.xml
@@ -111,7 +111,7 @@
             android:textColor="@color/textListSecondary"
             android:textSize="@dimen/list_item_secondary_text" />
 
-        <com.applikey.mattermost.views.ContentTextView
+        <com.vanniktech.emoji.EmojiTextView
             android:id="@+id/tv_message_preview"
             app:emojiSize="@dimen/emoji_size"
             android:layout_width="match_parent"
